[package]
name = "Linsinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.24.0"
tokio = "1.43.0"
serde_json = "1.0"
threadpool = "1.8.1"
serde = { version = "1.0.217", features = ["derive"] }