[package]
name = "Linsinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.43.0" , features = ["sync", "rt-multi-thread", "parking_lot"]}
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.9.0-beta.3"